task bc-5630 created tests